[build-system]
requires = ['flit_core >=3.4,<4']
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
addopts = "--cov=bslib"
testpaths = [
    "tests",
]

[project]
name='hplib'
authors= [{name='RE-Lab-Projects', email = 're-lab-projects@hs-emden-leer.de'}]

[project.optional-dependencies]
doc=[
    'sphinx~=4.2.0',
    'myst-parser',
    'furo',
    'nbsphinx',
]

[tool.mypy]
mypy_path = "bslib"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true