[build-system]
requires = ['flit_core >=3.4,<4']
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
addopts = "--cov=hplib"
testpaths = [
    "tests",
]

[project]
name='hplib'
authors= [{name='RE-Lab-Projects', email = 're-lab-projects@hs-emden-leer.de'}]
dynamic=['version', 'description']

[project.optional-dependencies]
doc=[
    'sphinx~=4.2.0',
    'myst-parser',
    'furo',
    'nbsphinx',
]
