[metadata]
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[versioneer]
VCS = git
style = pep440
versionfile_source = hplib/_version.py
versionfile_build = hplib/_version.py
tag_prefix = v
parentdir_prefix = hplib-
